chore: add typos configuration
- Add typos.toml to configure exclusions
for the typos spell checker
- Update treefmt.toml to run typos on the
entire git repository rathern than individual
files
- Set dream2nix's nixpkgs input to track the
flakes's nixpkgs since it is not up to date

--- a/treefmt.toml
+++ b/treefmt.toml
@@ -13,5 +13,5 @@ options = ["-i"]
 [formatter.typos]
 command = "typos"
 excludes = []
-includes = ["*"]
-options = ["--write-changes"]
+includes = ["."]
+options = []
